@startuml 14-clases-dominio-comun
title Dominio — shared kernel (dominio.comun): el agregado único OrdenRoot ⊃ Saga
!pragma layout smetana
hide empty members
skinparam classAttributeIconSize 0

class OrdenRoot <<@AggregateRoot>> {
  -sagaId : SagaId  «@Identity»
  -saga : Saga<?>
  -intentos : int
  -proximoReintentoEn : Instant
  -tokenTrabajador : UUID
  -tokenExpiraEn : Instant
  -ticketAbiertoEn : Instant
  -resultado : ResultadoOrden
  -version : long  «ÚNICA del agregado»
  +{static} nueva(saga, ahora) : OrdenRoot
  +{static} rehidratar(saga, intentos, proximoReintentoEn,\ntoken, tokenExpiraEn, ticketAbiertoEn, resultado, version)
  +asignarToken(token, lease, ahora)
  +renovarLease(lease, ahora)
  +tieneTokenVigente(ahora) : boolean
  +liberarToken()
  +resetearIntentos()  «intentos=0 Y ticketAbiertoEn=null»
  +marcarTicketAbierto(ahora)
  +despertar(ahora)  «proximoReintentoEn=ahora, libera token»
  +aparcar(ventana, ahora)  «proximoReintentoEn=ahora+ventana»
  +programarReintento(PoliticaReintentos, ahora)  «intentos++»
  +finalizar(ResultadoOrden)
  +estaViva() : boolean  «resultado == null»
  +saga() : Saga<?>
  +tipo() : TipoSaga  «delega en saga.tipo()»
}
note right of OrdenRoot
  Reloj determinista: nunca Instant.now(); todo método que
  depende del tiempo recibe Instant ahora como parámetro,
  aportado por la capa de aplicación. Una sola version protege
  ejecución (intentos/lease/ticket/resultado) + negocio (saga):
  varios flujos mutan ambos en la misma tx (consumer Kafka,
  soporte, arranque de secundarias), así que separarlos en dos
  agregados violaría "un agregado por transacción".
end note

abstract class "Saga<E extends Enum<E>>" as Saga <<@Entity>> {
  #id : SagaId  «@Identity»
  #externalId : ExternalId
  #estado : E
  #auditoria : List<AuditoriaIntervencion>
  {abstract} +tipo() : TipoSaga
  {abstract} +comandoActual() : ComandoPaso
  {abstract} +aplicarYAvanzar(ResultadoPaso)
  {abstract} +terminada() : boolean
  {abstract} +resultadoFinal() : ResultadoOrden
  {abstract} +marcarPasoActualOkManual(quien, justificacion, datos)
  #auditar(quien, accion, detalle)
  +id() / +externalId() / +estado() / +auditoria()
}
note right of Saga
  Entidad interna del agregado: SOLO negocio (la FSM E y la
  auditoría). Sin version propia (la controla OrdenRoot) y sin
  reintentos/tiempo/token: eso es responsabilidad de OrdenRoot.
  4 subclases — ver 15 (principal) y 16 (las 3 secundarias).
end note

class PoliticaReintentos {
  -ESCALERA : List<Duration> = {1,3,5,10,\n20,45,90,180 min}
  +esperaTras(intentosFallidos) : Duration
  +debeAbrirTicket(intentos) : boolean  «intentos >= 8»
}
note bottom of PoliticaReintentos
  Nunca se agota: consumida la escalera (8 intentos) se sigue
  reintentando cada 180 min indefinidamente. debeAbrirTicket
  combina con OrdenRoot.ticketAbiertoEn == null en la query del
  planificador de tickets (ver 07 y 17).
end note

enum TipoSaga {
  PRINCIPAL
  SECUNDARIA1
  SECUNDARIA2
  SECUNDARIA3
}
enum ResultadoOrden {
  FINALIZADA_OK
  FINALIZADA_COMPENSADA
}

interface ComandoPaso <<marcadora>>
interface ResultadoPaso <<marcadora>>
interface ContextoArranque <<sealed>> {
  ExternalId externalId()
  ArranqueSecundaria1(externalId, refPaso1)
  ArranqueSecundaria2(externalId, refPaso5)
  ArranqueSecundaria3(externalId, refPaso7)
}

class ConcurrenciaOptimistaException <<RuntimeException>> {
  (SagaId id, long versionEsperada)
}
class ExcepcionServicioExterno <<RuntimeException>> {
  -motivo : MotivoFallo  «transient»
}
class PasoNoIntervenibleException <<RuntimeException>> {
  (SagaId id, String detalle)
}
class DatosManualesRequeridosException <<RuntimeException>> {
  (SagaId id, String detalle)
}
class PuntoNoRetornoSuperadoException <<RuntimeException>> {
  (SagaId id)
}
class SagaYaCompletadaException <<RuntimeException>> {
  (SagaId id)
}

class MotivoFallo <<@ValueObject>> {
  codigo : String
  detalle : String
  esReintentable : boolean
  +{static} timeout() / errorTecnico(detalle) / errorNegocio(detalle)
}
class "SagaId, ExternalId, MensajeId,\nUsuarioSoporte, AuditoriaIntervencion,\nRefPaso1 / RefPaso5 / RefPaso7" as VOs <<@ValueObject>>

OrdenRoot "1" *-- "1" Saga : saga
OrdenRoot ..> PoliticaReintentos : programarReintento(politica, ahora)
OrdenRoot ..> ResultadoOrden : resultado
OrdenRoot ..> ConcurrenciaOptimistaException : el adaptador la lanza\nsi la version no coincide
Saga ..> TipoSaga : tipo()
Saga ..> ComandoPaso : comandoActual()
Saga ..> ResultadoPaso : aplicarYAvanzar()
Saga ..> ResultadoOrden : resultadoFinal()
Saga ..> PasoNoIntervenibleException
Saga ..> DatosManualesRequeridosException
ExcepcionServicioExterno ..> MotivoFallo

' Layout: columnas sin cruces
TipoSaga -[hidden]down- ResultadoOrden
ComandoPaso -[hidden]down- ResultadoPaso
ResultadoPaso -[hidden]down- ContextoArranque
MotivoFallo -[hidden]down- VOs

note bottom of ContextoArranque
  Contexto recortado con el que arranca cada saga secundaria (lo
  crea SagaPrincipal.contextosArranque() al llegar a
  TERMINADA — ver 03 y 15). RefPaso1/RefPaso5/RefPaso7 viven en
  este paquete porque los produce la principal y los consumen
  las secundarias (shared kernel mínimo).
end note
@enduml
